day2/target/debug/build/tokio-3411549424d5efbf/stderr
error[E0015]: cannot call non-const fn `Mutex::<i32>::new` in statics
 --> <anon>:3:48
  |
3 |     static MY_MUTEX: ::std::sync::Mutex<i32> = ::std::sync::Mutex::new(1);
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: calls in statics are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
